--- a/.github/workflows/github-pipelines.yaml
+++ b/.github/workflows/github-pipelines.yaml
@@ -1,35 +1,36 @@
-image: node:20.13.1-alpine
-pipelines:
-  pull-requests:
-    '**':
-      - parallel:
-          steps:
-            - step:
-                name: Lint project
-                caches:
-                  - node
-                script:
-                  - echo 'Running linter'
-                  - npm install
-                  - npm run lint
-            - step:
-                name: Type check project
-                caches:
-                  - node
-                script:
-                  - echo 'Type checking project'
-                  - npm install
-                  - npm run type-check
-            - step:
-                name: Testing project
-                caches:
-                  - node
-                script:
-                  - echo 'Testing project'
-                  - npm install
-                  - npm run test:unit
-      - step:
-          name: Deployment to main
-          deployment: test
-          script:
-            - echo "Deployed to main"
+name: Portfolio NodeJS CI
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    
+    - name: Checkout repository
+      uses: actions/checkout@v4
+    
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+    - name: 📥 Install dependencies
+        run: npm install
+
+    - name: 🧹 format
+      run: npm run format
+    
+    - name: 📄 lint
+      run: npm run lint
+    
+    - name: 🏗️ type check
+      run: npm run type-check
+    
+    - name: 🛎️ test
+      run: npm run test:unit:run
+
+      
