--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "my-portfoliov3",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -27,6 +27,14 @@
     "jsdom": "^24.0.0",
     "lru-cache": "^11.0.0",
     "postcss": "^8.4.39",
+    "@rushstack/eslint-patch": "^1.8.0",
+    "@tsconfig/node20": "^20.1.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/test-utils": "^2.4.5",
+    "@vue/tsconfig": "^0.5.1",
+    "@types/node": "^20.12.5",
+    "@vitest/coverage-v8": "^1.6.0",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
