feat: remove vuetify

--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
   },
   "dependencies": {
     "vue": "^3.4.29",
-    "vue-router": "^4.4.0",
-    "vuetify": "^3.6.12"
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
-    "@mdi/font": "^7.4.47",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.5",
